<resources>
    <string name="app_name">To-Do</string>
    <string name="percent_text">%1$d%%</string>
    <string name="star">star</string>
    <string name="list">List</string>
    <string name="enter_header">Enter header</string>
    <string name="add_row">Add Row</string>
    <string name="delete_card">delete card</string>
    <string name="current_score">Current score</string>
    <string name="desired_score">Desired score</string>
    <string name="goal">GOAL:</string>
    <string name="add_card_2">add card 2</string>
    <string name="add_card_1">add card 1</string>
    <string name="add_card_3">add card 3</string>
    <string name="add_card_4">add card 4</string>
    <string name="list_name">List Name</string>
    <string name="delete_list">delete list</string>
    <string name="enter_text">Enter text</string>
    <string name="score">score</string>
    <string name="delete_row">delete row</string>
    <string name="choose_a_name_for_the_tab">Choose a name for the tab</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="card_deleted">card deleted</string>
    <string name="undo">Undo</string>
    <string name="row_deleted">row deleted</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="contact">Contact</string>
    <string name="contribute">Contribute</string>
    <string name="about">About</string>
    <string name="get_data">GET DATA</string>
    <string name="you_can_click_here_to_get_all_the_json_that_s_currently_shown_the_json_stores_all_data_inside_the_app_in_string_format_nby_clicking_here_the_json_will_be_copied_to_your_clipboard">You can click here to get all the json that\'s currently shown. The json stores all data inside the app in string format.\nBy clicking here the json will be copied to your clipboard.</string>
    <string name="copy">copy</string>
    <string name="change_data">CHANGE DATA</string>
    <string name="you_can_paste_here_json_file_to_load_the_data_into_your_app_you_can_choose_to_add_data_or_load_all_data">You can paste here json file to load the data into your app. You can choose to add data or load all data.</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="add_data">Add data</string>
    <string name="replace_all_data">Replace all data</string>
    <string name="enter_json_here">Enter json here</string>
    <string name="apply">apply</string>
    <string name="choose_theme">choose theme:</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="light">Light</string>
    <string name="choose_primary_color">choose primary color:</string>
    <string name="dynamic_colors_android_12">Dynamic colors (android 12+)</string>
    <string name="default_colors">Default colors</string>
    <string name="choose_app_orientation">choose app orientation:</string>
    <string name="left_to_right">Left to right</string>
    <string name="right_to_left">Right to left</string>
    <string name="clearing_list">clearing List</string>
    <string name="text_copied">text copied!</string>
    <string name="not_a_json">not a json</string>
    <string name="enter_a_new_name_for_this_tab">Enter a new name for this tab</string>
    <string name="update">update</string>
    <string name="are_you_sure_you_want_to_delete_this_list">are you sure you want to delete this list? all cards and also scheduled card to this list will be deleted</string>
    <string name="delete">delete</string>
    <string name="list_deleted">List deleted</string>
    <string name="adding_a_new_list">Adding a new list</string>
    <string name="menu">menu</string>
    <string name="setting">setting</string>
    <string name="theme">theme</string>
    <string name="data">data</string>
    <string name="language">language</string>
</resources>