<!-- res/layout/checkbox_item.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginStart="@dimen/my_default_card_margin">

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:hint="@string/enter_text"
        android:importantForAutofill="no"
        android:inputType="text" />


    <EditText
        android:id="@+id/scoreEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:hint="@string/score"
        android:maxLength="9"
        android:inputType="number"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="@dimen/my_default_button_size"
        android:layout_height="@dimen/my_default_button_size"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:padding="@dimen/my_default_button_padding"
        android:src="@drawable/ic_delete_trash"
        app:tint="?attr/colorPrimary"
        android:contentDescription="@string/delete_row" />
</LinearLayout>